# AEDSimulator

./: .gitignore  .gitmodules  README.md  README.txt
aed/: CMakeLists.txt  Makefile  aed.pro  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
aed/model/: Rescuer.cpp  Rescuer.h
aed/model/aed/: AED.cpp  AED.h  AEDWorker.h
aed/model/aed/components/beeper/: Beeper.cpp  Beeper.h
aed/model/aed/components/display/: Display.cpp  Display.h
aed/model/aed/step/: Step.cpp  Step.h
aed/model/aed/step/action/: Action.cpp  Action.h
aed/model/patient/: Patient.cpp  Patient.h
aed/model/patient/heart/: Heart.cpp  Heart.h
aed/model/patient/heart/pulse/: CMakeLists.txt  Pulse.cpp  Pulse.h
aed/tests/: CMakeCache.txt  CMakeLists.txt
aed/tests/googletest/: .gitignore
aed/tests/tests/: test_heart.cpp  test_patient.cpp  test_pulse.cpp
aed/ui/: EcgWidget.cpp  EcgWidget.h
build-aed-Desktop-Debug/: Makefile  aed  moc_mainwindow.cpp  ui_mainwindow.h
docs/Main Documentation/class-diagram/: a4-class-diagram.drawio
docs/Main Documentation/sequence-diagrams/safety-1/: safety-1.drawio
docs/Main Documentation/sequence-diagrams/safety-2-ElectrodeMisplacment/: safety-2.drawio
docs/Main Documentation/sequence-diagrams/safety-3/: safety-3.drawio
docs/Main Documentation/sequence-diagrams/safety-4/: safety-4.drawio
docs/Main Documentation/sequence-diagrams/success-2-Asystole/: success-2.drawio
docs/Main Documentation/sequence-diagrams/success-3-HeartAttack-VFIB/: success-3.drawio
docs/Main Documentation/state-diagrams/aed/: aed.drawio
docs/Main Documentation/state-diagrams/heart/: heart.drawio
docs/Main Documentation/traceability-matrix/consolidated/: consolidated_traceability_matrix.docx
docs/Main Documentation/traceability-matrix/heart/: heart_traceability_matrix.docx
docs/Other Documentation/lcd screen/: LCD_Screen_Flowchart.drawio
docs/class-diagram/: .$a4-class-diagram.drawio.bkp  a4-class-diagram.drawio
docs/flowcharts/: .$aed-flowchart.drawio.bkp  aed-flowchart.drawio
docs/heart and ecg notes/: .$Standard Logic Flow Diagram.drawio.bkp  Standard Logic Flow Diagram.drawio  Success Demo.docx  ~$art_and_ECG_notes.docx  ~$ccess Demo.docx
docs/lcd screen/: .$LCD_Screen_Flowchart.drawio.bkp
docs/sequence-diagrams/safety-1/: safety-1.drawio
docs/sequence-diagrams/safety-2/: safety-2.drawio
docs/sequence-diagrams/success-1/: success-1.drawio
docs/state-diagram/: .$state-diagram.drawio.bkp
docs/state-diagrams/aed/: aed.drawio
docs/state-diagrams/heart/: heart.drawio
docs/traceability-matrix/aed/: aed_traceability_matrix.docx
docs/traceability-matrix/patient/: patient_traceability_matrix.docx
